--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1621,9 +1621,6 @@ h6 {
     font-size: 12px
 }
 
-p {
-    margin: 0 0 10px
-}
 
 .lead {
     margin-bottom: 20px;
@@ -3092,7 +3089,8 @@ label {
     display: inline-block;
     max-width: 100%;
     margin-bottom: 5px;
-    font-weight: 700
+    font-weight: 700;
+    font-size: 18px;
 }
 
 input[type=search] {
