--- a/style.css
+++ b/style.css
@@ -331,6 +331,7 @@ a:hover {
     text-transform: uppercase;
     font-size: 17px;
     transition: all 0.5s ease;
+    border-bottom: 2px solid transparent;
 }
 
 .nav > li a:hover,
@@ -440,6 +441,8 @@ nav .caret {
 .mg-md {
     margin-top: 10px;
     margin-bottom: 20px;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
 .mg-lg {
@@ -815,11 +818,11 @@ h4 {
 }
 
 .bg-dots-bg {
-    background-image: url("img/dots-bg.png");
+    background-image: url("img/dots-bg.webp");
 }
 
 .bg-lines-h2-bg {
-    background-image: url("img/lines-h2-bg.png");
+    background-image: url("img/lines-h2-bg.webp");
 }
 
 .bg-banniere {
@@ -829,6 +832,10 @@ h4 {
 
 .bg-presentation {
     background-image: url("img/image-de-presentation.webp");
+}
+
+.page-container-contact {
+    height: 100%;
 }
 
 @media (max-width: 1024px) {
